# spda-project

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 20260402_000001_initial_schema.py
app/: __init__.py  main.py
app/application/ports/: repositories.py
app/application/services/: admin.py  auth.py  doctor.py  patient.py
app/core/: config.py  logging.py  metrics.py  security.py
app/domain/: entities.py  enums.py  exceptions.py
app/infrastructure/: bootstrap.py
app/infrastructure/db/: models.py  session.py
app/infrastructure/repositories/: sqlalchemy.py
app/presentation/api/: dependencies.py  schemas.py
app/presentation/middleware/: observability.py
ops/certbot/: duckdns-auth.sh  duckdns-cleanup.sh
ops/gitops/argocd/: application.yaml  ingress.yaml  kustomization.yaml  project.yaml
ops/grafana/dashboards/: emr-logs.json
ops/k8s/base/: api.yaml  frontend.yaml  grafana.yaml  ingress.yaml  (+5 more)
ops/nginx/: nginx.conf
ops/prometheus/: prometheus.yml
ops/promtail/: kubernetes-promtail.yml  promtail.yml
scripts/: bootstrap_cluster.sh  deploy_remote.sh  e2e_remote.sh  install_minikube.sh  renew_tls.sh  request_tls.sh  sync_k8s_tls_secret.sh
tests/: conftest.py
tests/integration/: test_auth_and_admin.py  test_doctor_workflow.py  test_patient_portal.py
tests/unit/: test_admin_service.py  test_auth_service.py  test_doctor_and_patient_services.py  test_security.py
(+7 files in other folders)
